--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,15 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2"
   }
 }
