--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "clsx": "^1.2.1",
     "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
